add option to delete reply ping messages

--- a/src/main/resources/translations/rtuuy/strings.properties
+++ b/src/main/resources/translations/rtuuy/strings.properties
@@ -34,6 +34,11 @@ commands.anti_reply_ping.set_timeout_duration.description=Sets the duration of t
 commands.anti_reply_ping.set_timeout_duration.response.success=Successfully set the timeout duration to {duration}
 commands.anti_reply_ping.set_timeout_duration.response.no_duration=The defined timeout duration is {duration}
 
+commands.anti_reply_ping.set_delete_original_message.name=delete_original_message
+commands.anti_reply_ping.set_delete_original_message.description=Sets whether the message containing the ping should be deleted
+commands.anti_reply_ping.set_delete_original_message.response.active=Reply-ping messages WILL be deleted
+commands.anti_reply_ping.set_delete_original_message.response.inactive=Reply-ping messages WONT be deleted
+
 arguments.anti_reply_ping.user.name=user
 arguments.anti_reply_ping.user.description=The user to be targeted
 
@@ -42,5 +47,8 @@ arguments.anti_reply_ping.role.description=The role to be targeted
 
 arguments.anti_reply_ping.duration.name=duration
 arguments.anti_reply_ping.duration.description=The duration to be used
+
+arguments.anti_reply_ping.delete_original_message.name=delete
+arguments.anti_reply_ping.delete_original_message.description=Whether the message containing the ping should be deleted
 
 moderation.anti_reply_ping.time_out=Hey {user}! You are grounded missy >:(
