reword anti reply ping message

--- a/src/main/resources/translations/rtuuy/strings.properties
+++ b/src/main/resources/translations/rtuuy/strings.properties
@@ -51,4 +51,4 @@ arguments.anti_reply_ping.duration.description=The duration to be used
 arguments.anti_reply_ping.delete_original_message.name=delete
 arguments.anti_reply_ping.delete_original_message.description=Whether the message containing the ping should be deleted
 
-moderation.anti_reply_ping.time_out=Hey {user}! You are grounded missy >:(
+moderation.anti_reply_ping.time_out=Hey {user}, please don't reply-ping {pinged_user}!
