--- a/src/main/resources/translations/rtuuy/strings.properties
+++ b/src/main/resources/translations/rtuuy/strings.properties
@@ -52,3 +52,7 @@ arguments.anti_reply_ping.delete_original_message.name=delete
 arguments.anti_reply_ping.delete_original_message.description=Whether the message containing the ping should be deleted
 
 moderation.anti_reply_ping.time_out=Hey {user}, please don't reply-ping {pinged_user}!
+
+system_notifications.startup_webhook.message=Running v{version}
+system_notifications.startup_ntfy.title=Rtuuy Startup Notification
+system_notifications.startup_ntfy.message=Running v{version}
