refactor startup notification webhook

--- a/src/main/resources/translations/rtuuy/strings.properties
+++ b/src/main/resources/translations/rtuuy/strings.properties
@@ -53,6 +53,7 @@ arguments.anti_reply_ping.delete_original_message.description=Whether the messag
 
 moderation.anti_reply_ping.time_out=Hey {user}, please don't reply-ping {pinged_user}!
 
+system_notifications.startup_webhook.title={bot_username} Startup Notification
 system_notifications.startup_webhook.message=Running v{version}
 system_notifications.startup_ntfy.title=Rtuuy Startup Notification
 system_notifications.startup_ntfy.message=Running v{version}
