--- a/src/main/resources/translations/rtuuy/strings.properties
+++ b/src/main/resources/translations/rtuuy/strings.properties
@@ -54,8 +54,8 @@ arguments.anti_reply_ping.delete_original_message.description=Whether the messag
 moderation.anti_reply_ping.time_out=Hey {user}, please don't reply-ping {pinged_user}!
 
 system_notifications.startup_webhook.title={bot_username} Startup Notification
-system_notifications.startup_webhook.message=Running git:[{commit_sha}]({commit_url}))
+system_notifications.startup_webhook.message=Running git-[`{commit_sha}`]({commit_url})
 system_notifications.startup_ntfy.title={bot_username} Startup Notification
-system_notifications.startup_ntfy.message=Running git:{commit_sha})
+system_notifications.startup_ntfy.message=Running git:{commit_sha}
 
 notifications.footer.powered_by=Powered by {author}
