--- a/src/main/resources/translations/rtuuy/strings.properties
+++ b/src/main/resources/translations/rtuuy/strings.properties
@@ -1,3 +1,8 @@
+commands.about.name=about
+commands.about.description=Shows information about the bot
+commands.about.response.title=# About {bot_username}
+commands.about.response.text={bot_username} is a multi-purpose discord bot, maintained by {author}.\nCurrently running git-`{commit_sha}`.\nYou can find the [source code on GitHub]({repository_url})
+
 commands.anti_reply_ping.name=anti_reply_ping
 commands.anti_reply_ping.description=Manages the anti reply-ping feature on this server
 
