temporarily rename about command
conflicts with 'about copyright' builtin command

--- a/src/main/resources/translations/rtuuy/strings.properties
+++ b/src/main/resources/translations/rtuuy/strings.properties
@@ -1,4 +1,4 @@
-commands.about.name=about
+commands.about.name=bot_info
 commands.about.description=Shows information about the bot
 commands.about.response.title=# About {bot_username}
 commands.about.response.text={bot_username} is a multi-purpose discord bot, maintained by {author}.\nCurrently running git-`{commit_sha}`.\nYou can find the [source code on GitHub]({repository_url})
