fix about commands

--- a/src/main/resources/translations/rtuuy/strings.properties
+++ b/src/main/resources/translations/rtuuy/strings.properties
@@ -1,7 +1,12 @@
-commands.about.name=bot_info
-commands.about.description=Shows information about the bot
-commands.about.response.title=# About {bot_username}
-commands.about.response.text={bot_username} is a multi-purpose discord bot, maintained by {author}.\nCurrently running git-`{commit_sha}`.\nYou can find the [source code on GitHub]({repository_url})
+about.application_info.command_name=appinfo
+about.application_info.command_description=General Information about the bot
+about.application_info.title=About {bot_username}
+about.application_info.text=A multi-purpose discord bot, maintained by {author}
+about.application_info.id_field.title=Application ID:
+about.application_info.id_field.text=`{application_id}`
+about.application_info.git_field.title=Git:
+about.application_info.git_field.text=[`{commit_sha}`]({commit_url})
+about.application_info.footer={repository_url}
 
 commands.anti_reply_ping.name=anti_reply_ping
 commands.anti_reply_ping.description=Manages the anti reply-ping feature on this server
