add more context checks

--- a/src/main/resources/translations/rtuuy/strings.properties
+++ b/src/main/resources/translations/rtuuy/strings.properties
@@ -69,3 +69,6 @@ system_notifications.startup_ntfy.title={bot_username} Startup Notification
 system_notifications.startup_ntfy.message=Running git:{commit_sha}
 
 notifications.footer.powered_by=Powered by {author}
+
+checks.is_not_join.failed=Message is an automated join message
+checks.is_user.failed=Message did not concern a user
