add experimental about terms section

--- a/src/main/resources/translations/rtuuy/strings.properties
+++ b/src/main/resources/translations/rtuuy/strings.properties
@@ -6,6 +6,10 @@ about.application_info.id_field.title=Application ID:
 about.application_info.id_field.text=`{application_id}`
 about.application_info.git_field.title=Git:
 about.application_info.git_field.text=[`{commit_sha}`]({commit_url})
+
+about.application_info.terms_of_use.title=Terms of Use:
+about.application_info.terms_of_use.text=[Terms of Use]({terms_of_service_url})\n[Privacy Policy]({privacy_policy_url})
+
 about.application_info.footer={repository_url}
 
 commands.anti_reply_ping.name=anti_reply_ping
