rework ban sync extension

--- a/src/main/resources/translations/rtuuy/strings.properties
+++ b/src/main/resources/translations/rtuuy/strings.properties
@@ -76,3 +76,4 @@ notifications.footer.powered_by=Powered by {author}
 
 checks.is_not_join.failed=Message is an automated join message
 checks.is_user.failed=Message did not concern a user
+checks.is_not_synced_ban.failed=Event was a synced ban already, avoiding duplicate action
