move anti reply ping to postgres and refactor

--- a/src/main/resources/translations/rtuuy/strings.properties
+++ b/src/main/resources/translations/rtuuy/strings.properties
@@ -6,10 +6,8 @@ about.application_info.id_field.title=Application ID:
 about.application_info.id_field.text=`{application_id}`
 about.application_info.git_field.title=Git:
 about.application_info.git_field.text=[`{commit_sha}`]({commit_url})
-
 about.application_info.terms_of_use.title=Terms of Use:
 about.application_info.terms_of_use.text=[Terms of Use]({terms_of_service_url})\n[Privacy Policy]({privacy_policy_url})
-
 about.application_info.footer={repository_url}
 
 commands.anti_reply_ping.name=anti_reply_ping
@@ -23,31 +21,33 @@ commands.anti_reply_ping.add.response.already_added={user} is already marked as 
 commands.anti_reply_ping.remove.name=remove
 commands.anti_reply_ping.remove.description=Unmarks a user as non-reply-pingable
 commands.anti_reply_ping.remove.response.success=Unmarked {user} as non-reply-pingable
-commands.anti_reply_ping.remove.response.already_removed={user} is already not marked as non-reply-pingable!
+commands.anti_reply_ping.remove.response.not_found={user} was not marked as non-reply-pingable!
 
 commands.anti_reply_ping.list.name=list
 commands.anti_reply_ping.list.description=Shows the list of non-reply-pingable users
 commands.anti_reply_ping.list.placeholder=There are no non-reply-pingable users!
+commands.anti_reply_ping.list.embed.title=Non-reply-pingable users
 
-commands.anti_reply_ping.exclude.name=exclude
-commands.anti_reply_ping.exclude.description=Excludes a role from the anti-reply-ping system
-commands.anti_reply_ping.exclude.response.success=Added {role} to the excluded list
-commands.anti_reply_ping.exclude.response.already_added={role} is already in the excluded list!
+commands.anti_reply_ping.add_excluded_role.name=add_excluded_role
+commands.anti_reply_ping.add_excluded_role.description=Excludes a role from the anti-reply-ping system
+commands.anti_reply_ping.add_excluded_role.response.success=Added {role} to the excluded list
+commands.anti_reply_ping.add_excluded_role.response.already_added={role} is already in the excluded list!
 
-commands.anti_reply_ping.include.name=include
-commands.anti_reply_ping.include.description=Removes a role from the anti-reply-ping system's exclusion list
-commands.anti_reply_ping.include.response.success=Removed {role} from the excluded list
-commands.anti_reply_ping.include.response.already_removed={role} is already not in the excluded list!
+commands.anti_reply_ping.remove_excluded_role.name=remove_excluded_role
+commands.anti_reply_ping.remove_excluded_role.description=Removes a role from the anti-reply-ping system's exclusion list
+commands.anti_reply_ping.remove_excluded_role.response.success=Removed {role} from the excluded list
+commands.anti_reply_ping.remove_excluded_role.response.not_found={role} was not in the excluded list!
 
-commands.anti_reply_ping.role_list.name=role_list
-commands.anti_reply_ping.role_list.description=Shows the list of excluded roles
-commands.anti_reply_ping.role_list.placeholder=There are no excluded roles!
+commands.anti_reply_ping.list_global_exclusions.name=list_global_exclusions
+commands.anti_reply_ping.list_global_exclusions.description=Shows the list of guild-wide ignored roles and users
+commands.anti_reply_ping.list_global_exclusions.placeholder=There currently are no exclusions!
+commands.anti_reply_ping.list_global_exclusions.embed.title=Anti-Reply-Ping Excluded Users and Roles
 
+#FIXME
 commands.anti_reply_ping.set_timeout_duration.name=timeout_for
 commands.anti_reply_ping.set_timeout_duration.description=Sets the duration of the timeout applied by the anti-reply ping system
 commands.anti_reply_ping.set_timeout_duration.response.success=Successfully set the timeout duration to {duration}
 commands.anti_reply_ping.set_timeout_duration.response.no_duration=The defined timeout duration is {duration}
-
 commands.anti_reply_ping.set_delete_original_message.name=delete_original_message
 commands.anti_reply_ping.set_delete_original_message.description=Sets whether the message containing the ping should be deleted
 commands.anti_reply_ping.set_delete_original_message.response.active=Reply-ping messages WILL be deleted
@@ -69,11 +69,17 @@ moderation.anti_reply_ping.time_out=Hey {user}, please don't reply-ping {pinged_
 
 system_notifications.startup_webhook.title={bot_username} Startup Notification
 system_notifications.startup_webhook.message=Running git-[`{commit_sha}`]({commit_url})
+
 system_notifications.startup_ntfy.title={bot_username} Startup Notification
 system_notifications.startup_ntfy.message=Running git:{commit_sha}
 
 notifications.footer.powered_by=Powered by {author}
 
+checks.has_reply_ping.not_reply=Message is not a reply to another message
+checks.has_reply_ping.not_pingable=Message cannot be pinged
+checks.has_reply_ping.no_ping=Message does not ping the parent message author
+checks.has_reply_ping.regular_ping=Message body already contains a ping for parent message author
+checks.is_not_guild_owner.failed=Event was triggered by the guild owner
 checks.is_not_join.failed=Message is an automated join message
 checks.is_user.failed=Message did not concern a user
 checks.is_not_synced_ban.failed=Event was a synced ban already, avoiding duplicate action
