--- a/src/main/resources/translations/rtuuy/strings.properties
+++ b/src/main/resources/translations/rtuuy/strings.properties
@@ -16,7 +16,6 @@ commands.anti_reply_ping.description=Manages the anti reply-ping feature on this
 commands.anti_reply_ping.add.name=add
 commands.anti_reply_ping.add.description=Marks a user as non-reply-pingable
 commands.anti_reply_ping.add.response.success=Marked {user} as non-reply-pingable
-commands.anti_reply_ping.add.response.already_added={user} is already marked as non-reply-pingable!
 
 commands.anti_reply_ping.remove.name=remove
 commands.anti_reply_ping.remove.description=Unmarks a user as non-reply-pingable
@@ -43,27 +42,17 @@ commands.anti_reply_ping.list_global_exclusions.description=Shows the list of gu
 commands.anti_reply_ping.list_global_exclusions.placeholder=There currently are no exclusions!
 commands.anti_reply_ping.list_global_exclusions.embed.title=Anti-Reply-Ping Excluded Users and Roles
 
-#FIXME
-commands.anti_reply_ping.set_timeout_duration.name=timeout_for
-commands.anti_reply_ping.set_timeout_duration.description=Sets the duration of the timeout applied by the anti-reply ping system
-commands.anti_reply_ping.set_timeout_duration.response.success=Successfully set the timeout duration to {duration}
-commands.anti_reply_ping.set_timeout_duration.response.no_duration=The defined timeout duration is {duration}
-commands.anti_reply_ping.set_delete_original_message.name=delete_original_message
-commands.anti_reply_ping.set_delete_original_message.description=Sets whether the message containing the ping should be deleted
-commands.anti_reply_ping.set_delete_original_message.response.active=Reply-ping messages WILL be deleted
-commands.anti_reply_ping.set_delete_original_message.response.inactive=Reply-ping messages WONT be deleted
-
 arguments.anti_reply_ping.user.name=user
 arguments.anti_reply_ping.user.description=The user to be targeted
 
 arguments.anti_reply_ping.role.name=role
 arguments.anti_reply_ping.role.description=The role to be targeted
 
-arguments.anti_reply_ping.duration.name=duration
-arguments.anti_reply_ping.duration.description=The duration to be used
+arguments.anti_reply_ping.timeout_duration.name=timeout_duration
+arguments.anti_reply_ping.timeout_duration.description=How long to timeout the user for (disabled if not provided)
 
-arguments.anti_reply_ping.delete_original_message.name=delete
-arguments.anti_reply_ping.delete_original_message.description=Whether the message containing the ping should be deleted
+arguments.anti_reply_ping.delete_original_message.name=delete_original_message
+arguments.anti_reply_ping.delete_original_message.description=Whether the message containing the ping should be deleted (default: true)
 
 moderation.anti_reply_ping.time_out=Hey {user}, please don't reply-ping {pinged_user}!
 
